--- a/src/frontend/operator/style.css
+++ b/src/frontend/operator/style.css
@@ -8,7 +8,7 @@ body{
     margin-top:10%;
 }
 /* Bordered form */
-form {
+#login-box {
     width:100%;
     padding: 30px;
     border: 1px solid #f1f1f1;
@@ -32,7 +32,7 @@ input[type=text], input[type=password] {
 }
 
 /* Set a style for all buttons */
-input[type=submit] {
+button {
     background-color: #53af57;
     color: white;
     padding: 14px 20px;
@@ -41,7 +41,7 @@ input[type=submit] {
     cursor: pointer;
     width: 100%;
 }
-input[type=submit]:hover {
+button:hover {
     background-color: white;
     color: #53af57;
     border: 1px solid #53af57;
