--- a/src/frontend/client/style.css
+++ b/src/frontend/client/style.css
@@ -14,6 +14,7 @@ body{
     width:100%;
     height:250px;
     padding: 30px;
+    margin: -30px;
     border: 1px solid #f1f1f1;
     background: #fff;
     box-shadow: 0 0 20px 0 rgba(0, 0, 0, 0.2), 0 5px 5px 0 rgba(0, 0, 0, 0.24);
@@ -59,11 +60,11 @@ p {
     text-align: center;
 }
 
-h1#ticket {
+h2#ticket {
     margin-top:75px;
 }
 
-h1{
+h2{
     text-align: center;
     font-family: Lato;
 }
