léger changement sur l'affichage

--- a/src/frontend/operator/style.css
+++ b/src/frontend/operator/style.css
@@ -11,10 +11,21 @@ body{
 #login-box {
     width:100%;
     padding: 30px;
+    margin: -30px;
     border: 1px solid #f1f1f1;
     background: #fff;
     box-shadow: 0 0 20px 0 rgba(0, 0, 0, 0.2), 0 5px 5px 0 rgba(0, 0, 0, 0.24);
 }
+
+#affichage {
+    width:100%;
+    padding: 30px;
+    margin: -30px;
+    border: 1px solid #f1f1f1;
+    background: #fff;
+    box-shadow: 0 0 20px 0 rgba(0, 0, 0, 0.2), 0 5px 5px 0 rgba(0, 0, 0, 0.24);
+}
+
 #container h1{
     width: 38%;
     margin: 0 auto;
@@ -48,8 +59,8 @@ button:hover {
     border: 1px solid #53af57;
 }
 
-h1 {
-    text-align: center;
+#login-box h1 {
+    margin-left: 105px
 }
 
 p {
